[package]
name = "bevy_ui_text_input"
keywords = ["bevy", "gamedev", "ui", "text", "input"]
description = "Bevy UI text input plugin"
categories = ["game-development", "gui", "text-editors"]
version = "0.6.0"
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/ickshonpe/bevy_ui_text_input"

[dependencies]
bevy = { path = "../bevy/crates/bevy_internal", package = "bevy_internal", features = [
    "std",
    "bevy_asset",
    "bevy_ui",
    "bevy_ui_picking_backend",
    "bevy_text",
    "bevy_input_focus",
    "bevy_render",
    "bevy_sprite",
    "bevy_color",
    "bevy_log",
    "bevy_winit",
    "bevy_window",
    "bevy_core_pipeline"
] }
sys-locale = "0.3.0"
regex = "1.11.1"
once_cell = "1.21.3"
cosmic-text = "0.14"

[target.'cfg(any(windows, unix))'.dependencies]
arboard = { version = "3.5.0", default-features = false }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2" }
web-sys = { version = "0.3", features = ["Navigator", "Clipboard"] }
wasm-bindgen-futures = "0.4"

# [workspace] # Commented out to be part of parent workspace
